MESSAGE(STATUS "Creating gpu jpeg project")

MESSAGE(STATUS "Finding cuda package")
FIND_PACKAGE(CUDA REQUIRED)
#SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20)
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_30,code=sm_30)
#SET(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
#SET(CUDA_VERBOSE_BUILD ON)

MESSAGE(STATUS "Finding qt package")
FIND_PACKAGE(QT4 REQUIRED)
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTOPENGL TRUE)
FIND_PACKAGE(OPENGL REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_GUI_LIBS -DQT_CORE_LIB -DQT_XML_LIB -DQT3_SUPPORT)

FILE(GLOB BufferSources "buffer/*.h" "buffer/*.cpp")
FILE(GLOB CudaBufferSources "buffer/cuda/*.h" "buffer/cuda/*.cpp")
FILE(GLOB HostBufferSources "buffer/host/*.h" "buffer/host/*.cpp")
FILE(GLOB ColorSources "color/*.h" "color/*.cpp")
FILE(GLOB GuiSources "gui/*.h" "gui/*.cpp")
FILE(GLOB GeometrySources "geometry/*.h" "geometry/*.cpp")
FILE(GLOB_RECURSE CoreSources "core/*.h" "core/*.cpp")
FILE(GLOB_RECURSE FilteringSources "filtering/*.h" "filtering/*.cpp")
FILE(GLOB_RECURSE LightSources "light/*.h" "light/*.cpp")
FILE(GLOB_RECURSE NetworkSources "network/*.h" "network/*.cpp")
FILE(GLOB_RECURSE ShadingSources "shading/*.h" "shading/*.cpp")
FILE(GLOB_RECURSE ShapesSources "shapes/*.h" "shapes/*.cpp")
FILE(GLOB_RECURSE TextureSources "texture/*.h" "texture/*.cpp")
FILE(GLOB_RECURSE TransferFunctionSources "transferfunction/*.h" "transferfunction/*.cpp")
FILE(GLOB_RECURSE TransportSources "transport/*.h" "transport/*.cpp")
FILE(GLOB_RECURSE VectorSources "vector/*.h" "vector/*.cpp")
FILE(GLOB_RECURSE CudaSources "*.cuh" "*.cu")

SOURCE_GROUP("buffer" FILES ${BufferSources})
SOURCE_GROUP("buffer\\cuda" FILES ${CudaBufferSources})
SOURCE_GROUP("buffer\\host" FILES ${HostBufferSources})
SOURCE_GROUP("color" FILES ${ColorSources})
SOURCE_GROUP("gui" FILES ${GuiSources})
SOURCE_GROUP("geometry" FILES ${GeometrySources})
SOURCE_GROUP("jpeg" FILES ${JpegSources})
SOURCE_GROUP("core" FILES ${CoreSources})
SOURCE_GROUP("filtering" FILES ${FilteringSources})
SOURCE_GROUP("light" FILES ${LightSources})
SOURCE_GROUP("network" FILES ${NetworkSources})
SOURCE_GROUP("shading" FILES ${ShadingSources})
SOURCE_GROUP("shapes" FILES ${ShapesSources})
SOURCE_GROUP("texture" FILES ${TextureSources})
SOURCE_GROUP("transferfunction" FILES ${TransferFunctionSources})
SOURCE_GROUP("transport" FILES ${TransportSources})
SOURCE_GROUP("vector" FILES ${VectorSources})
SOURCE_GROUP("cuda" FILES ${CudaSources})

SET(RendererSources main.cpp ${BufferSources} ${CudaBufferSources} ${HostBufferSources} ${ColorSources} ${GuiSources} ${CoreSources} ${FilteringSources} ${GeometrySources} ${LightSources} ${NetworkSources} ${ShadingSources} ${ShapesSources} ${TextureSources} ${TransferFunctionSources} ${TransportSources} ${VectorSources} ${CudaSources})

SET(MocHeaders core/renderthread.h gui/rendererwindow.h network/compositorsocket.h)

QT4_WRAP_CPP(RendererHeadersMoc ${MocHeaders})
CUDA_ADD_EXECUTABLE(Renderer ${RendererSources} ${RendererHeadersMoc})
TARGET_LINK_LIBRARIES(Renderer Utilities Opengl32)

INSTALL_TARGETS(/renderer Renderer)

SET(CudaDlls ${CUDA_TOOLKIT_ROOT_DIR}/bin/cudart32_55.dll)
INSTALL_FILES(/renderer FILES ${CudaDlls})

SET(QtDlls ${QT_BINARY_DIR}/QtCore4.dll ${QT_BINARY_DIR}/QtGui4.dll ${QT_BINARY_DIR}/QtXml4.dll ${QT_BINARY_DIR}/QtSql4.dll ${QT_BINARY_DIR}/QtNetwork4.dll ${QT_BINARY_DIR}/QtOpenGl4.dll)
INSTALL_FILES(/renderer FILES ${QtDlls})

INSTALL_FILES(/renderer FILES ${CMAKE_CURRENT_SOURCE_DIR}/renderer.ini)

INCLUDE(InstallRequiredSystemLibraries)